--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,6 +5,7 @@
     padding: 0;
 }
 .App{
-    max-width: 96rem;
+    /* max-width: ; */
     margin:0rem auto;
+    /* transition:all 0.25s linear 0s; */
 }
