--- a/src/css/colorCards.css
+++ b/src/css/colorCards.css
@@ -1,24 +1,48 @@
-.colorCard{
-  height: 15rem;
-  width: 8rem;
-  background-color: aqua;
-  position: absolute;
-  left: auto;
-  right: 4rem;
-  top: 10rem;
-  border-radius: 0.5rem;
-  display: grid;
-  grid-template-columns: repeat(2,3rem);
-  column-gap: 0.5rem;
-  row-gap: 0rem;
-  align-items:center;
-  justify-content: center;
-  /* animation: slide 1s ease-in normal forwards; */
+@media (min-width:600px) {
+  .colorCard{
+    height: 15rem;
+    width: 8rem;
+    position: absolute;
+    left: auto;
+    right: 4rem;
+    top: 10rem;
+    border-radius: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(2,3rem);
+    column-gap: 0.5rem;
+    row-gap: 0rem;
+    align-items:center;
+    justify-content: center;
+    /* animation: slide 1s ease-in normal forwards; */
+  }
+  .colorCard > div{
+    height: 3rem;
+    border-radius: 0.5rem;
+    animation: zoom 0.2s normal forwards;
+  }
 }
-.colorCard > div{
-  height: 3rem;
-  border-radius: 0.5rem;
-  animation: zoom 0.2s normal forwards;
+@media (min-width:300px)and (max-width:600px) {
+  .colorCard{
+    height: 10rem;
+    width: 6rem;
+    position: absolute;
+    left: auto;
+    right: 2rem;
+    top: 8rem;
+    border-radius: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(2,2rem);
+    column-gap: 0.5rem;
+    row-gap: 0rem;
+    align-items:center;
+    justify-content: center;
+    /* animation: slide 1s ease-in normal forwards; */
+  }
+  .colorCard > div{
+    height: 2rem;
+    border-radius: 0.5rem;
+    animation: zoom 0.2s normal forwards;
+  }
 }
 
 @keyframes zoom {
