--- a/src/components/Education/degree.css
+++ b/src/components/Education/degree.css
@@ -2,6 +2,7 @@
     width: 80%;
     margin: 0rem auto;
     font-family: "Barlow Condensed";
+    /* background-color: aqua; */
 }
 #title{
     text-align: center;
@@ -17,10 +18,12 @@
 #img{
     height: 15rem;
     width: 15rem;
+    border-radius: 50%
 }
 #img img{
-    height: 15rem;
-    width: 15rem;
+    height: 10rem;
+    width: 10rem;
+    
 }
 .degree-wrapper{
 
