--- a/src/components/Certifications/certifications.css
+++ b/src/components/Certifications/certifications.css
@@ -11,8 +11,19 @@
     display: grid;
     margin: 2rem auto;
     width: 80%;
-    grid-template-columns:repeat(3,30%);
     justify-content: center;
     row-gap: 2rem;
     column-gap: 2rem;
+}
+@media (min-width:768px) {
+    .certificate-card{
+        grid-template-columns:repeat(3,30%);
+    }
+    
+}
+@media (min-width:300px) and (max-width:700px) {
+    .certificate-card{
+        grid-template-columns: repeat(2,40%);
+    }
+
 }
