--- a/src/components/Certifications/createCertificate.css
+++ b/src/components/Certifications/createCertificate.css
@@ -19,7 +19,7 @@
 		height: 8rem;
 	}
 	#overlay-text {
-		font-size: 1.5rem;
+		font-size: 2rem;
 		font-weight: 700;
 	}
 }
@@ -60,7 +60,7 @@
 }
 .overlay-link {
 	/* display: none; */
-	opacity: 0;
+	opacity: 1;
 	position: absolute;
 	width: 100%;
 	display: flex;
@@ -75,18 +75,23 @@
 	}
 	100% {
 		margin-top: 0rem;
-		opacity: 1;
+		opacity: 2;
 	}
 }
 /* .cert-overlay:hover{
     opacity: 0.5;
 } */
-.cert-overlay:hover .overlay-link {
+.cert-overlay:hover #overlay-text {
 	animation: move-in 0.5s ease-in-out 1 normal forwards;
 }
+.cert-overlay:hover .overlay-link{
+	background-color: gray;
+	opacity: 0.7;
+}
 #overlay-text {
+	opacity: 0;
 	text-decoration: none;
-	border: 2px solid;
+	/* border: 2px solid; */
 	padding: 5px 10px;
 	border-radius: 5px;
 	margin: 0rem auto;
