--- a/src/components/Get In Touch/contactForm.module.css
+++ b/src/components/Get In Touch/contactForm.module.css
@@ -1,32 +1,57 @@
-.contactFormCard{
-    margin: 2rem;
-    width: 50%;
-    /* background-color: aqua; */
+.contactFormCard {
+	margin: 2rem;
+	width: 50%;
+	/* background-color: aqua; */
 }
-.contactFormCard h1{
-    font-size: 3rem;
-}
-.Inputs{
-    background-color: inherit;
+.contactFormCard h1 {
     margin-left: 2rem;
-    border: none;
-    height: 4rem;
-    color: black;
-    padding: 0px 20px;
-    font-size: 1.5rem;
-    font-weight: 700;
-    border-radius: 10px;
-    margin-top: 2rem;
+	font-size: 3rem;
 }
-.contactForm textarea{
+.contactForm{
+    flex: 1;
+    width: 100%;
+}
+.Inputs {
+	background-color: inherit;
+	margin-left: 2rem;
+	border: none;
+	height: 4rem;
+	color: purple;
+	padding: 0px 20px;
+	font-size: 1.5rem;
+	font-weight: 700;
+    border: 1px solid #ccc;
+	border-radius: 5px;
+	margin-top: 2rem;
+    width: auto;
+    max-width: 100%;
+}
+.Inputs:focus {
+	outline: none;
+	border-color: #240370;
+	background-color: #e0d4fd;
+}
+.contactForm textarea {
     padding-top: 1rem;
-    width: 70%;
-    height: 10rem;
-    resize: none;
+	/* width: 100%; */
+	height: 10rem;
+    width: 20rem;
+    max-width: 100%;
+	resize: none;
 }
-.Inputs:hover{
-    background-color: antiquewhite;
+/* .Inputs:hover {
+    background-color: #e0d4fd;
+} */
+.sendBtn {
+    /* display: flex;
+    justify-content: flex-end; */
+    margin-top: 1rem;
+    margin-left: 2rem;
 }
-.sendBtn{
-    margin: 2rem 2rem;
+.invalidInput{
+	border: 1px solid #b40e0e;
+  background-color: #fddddd;
+}
+.sent .Inputs{
+	color:rgb(156, 156, 156);
 }
