--- a/src/components/Certifications/certifications.css
+++ b/src/components/Certifications/certifications.css
@@ -14,17 +14,11 @@
     justify-content: center;
     row-gap: 2rem;
     column-gap: 2rem;
+    grid-template-columns:repeat(3,30%);
 }
-@media (min-width:768px) {
-    .certificate-card{
-        grid-template-columns:repeat(3,30%);
-    }
-    
-}
-@media (min-width:300px) and (max-width:700px) {
+@media (max-width:768px) {
     .certificate-card{
         grid-template-columns: repeat(1,100%);
-        /* flex:1 1 30%; */
     }
-
+    
 }
