--- a/src/components/Get In Touch/GetInTouch.module.css
+++ b/src/components/Get In Touch/GetInTouch.module.css
@@ -1,5 +1,5 @@
 .getInTouch{
-    margin: 10rem auto; 
+    margin: 5rem auto; 
     /* padding: 2rem; */
     width: 90%;
     border: 2px solid purple;
@@ -7,7 +7,7 @@
     display: flex;
 }
 .getInTouchCard{
-    margin: 2rem;
+    margin: 2rem auto;
     width: 40%;
 }
 .getInTouchCard h1{
@@ -35,4 +35,13 @@
 .contactValue{
     margin-left: 2rem;
     font-size: 2rem;
+}
+
+@media (max-width:768px) {
+    .getInTouch{
+        flex-direction: column;
+    }
+    .getInTouchCard{
+        width: 90%;
+    }
 }
