--- a/src/components/Certifications/certifications.css
+++ b/src/components/Certifications/certifications.css
@@ -1,5 +1,4 @@
 .certifications{
-    margin-top: 5rem;
     font-family: "Barlow Condensed";
 }
 #certification-title{
@@ -8,17 +7,20 @@
     font-weight: 800;
 }
 .certificate-card{
-    display: grid;
+    display: flex;
     margin: 2rem auto;
-    width: 80%;
+    width: 90%;
     justify-content: center;
-    row-gap: 2rem;
-    column-gap: 2rem;
-    grid-template-columns:repeat(3,30%);
+    gap: 2rem;
+    flex-wrap: wrap;
+
+    /* row-gap: 2rem; */
+    /* column-gap: 2rem; */
+    /* grid-template-columns:repeat(3,30%); */
+    /* flex: 1 1 ; */
 }
 @media (max-width:768px) {
     .certificate-card{
         grid-template-columns: repeat(1,100%);
-    }
-    
+    }    
 }
