--- a/src/components/Certifications/createCertificate.css
+++ b/src/components/Certifications/createCertificate.css
@@ -1,21 +1,26 @@
 .certificate {
 	height: 15rem;
-	border: 2px solid;
+	border: 2px solid purple;
 	border-radius: 10px;
 	min-width: 20rem;
 }
 .cert-image {
 	border-radius: inherit;
 	height: 8rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgb(135, 185, 135);
 }
-
-.cert-title {
-	font-size: 2rem;
-	margin-top: 0.5rem;
+.cert-image svg{
+	height: 8rem;
+	width: 8rem;
 }
-.instructor {
-	font-size: 1.5rem;
-	margin-top: 1rem;
+.cert-info{
+	height: 7rem;
+	display: flex;
+	justify-content: space-evenly;
+	flex-direction: column;
 }
 .overlay-link {
 	height: 8rem;
@@ -28,27 +33,20 @@
 }
 @media (max-width: 768px) {
 	.certificate {
-		height: 12rem;
+		height: 13rem;
 		border-radius: 7px;
 	}
 	.cert-image {
 		border-radius: inherit;
-		height: 5rem;
+		height: 7rem;
 	}
-
-	.cert-title {
-		font-size: 1.5rem;
-	}
-	.instructor {
-		font-size: 1.2rem;
+	.cert-info{
+		height: 6rem;
 	}
 	.overlay-link {
-		height: 5rem;
+		height: 7rem;
 		border-top-left-radius: 7px;
 		border-top-right-radius: 7px;
-	}
-	#overlay-text {
-		font-size: 1.5rem;
 	}
 }
 .cert-body {
@@ -78,7 +76,7 @@
 	}
 	100% {
 		margin-top: 0rem;
-		opacity: 2;
+		opacity: 1;
 	}
 }
 /* .cert-overlay:hover{
@@ -88,15 +86,9 @@
 	animation: move-in 0.2s ease-in-out 1 normal forwards;
 }
 .cert-overlay:hover .overlay-link {
-	background-color: black;
-	opacity: 0.7;
+	background-color: rgb(11, 11, 11);
+	opacity: 1;
 }
 #overlay-text {
 	opacity: 0;
-	color: aqua;
-	text-decoration: none;
-	/* border: 2px solid; */
-	padding: 5px 10px;
-	border-radius: 5px;
-	margin: 0rem auto;
 }
