--- a/src/components/Education/degree.css
+++ b/src/components/Education/degree.css
@@ -18,7 +18,8 @@
 #img{
     height: 15rem;
     width: 15rem;
-    border-radius: 50%
+    border-radius: 50%;
+    border:5px solid purple;
 }
 #img img{
     height: 10rem;
@@ -28,7 +29,7 @@
 .degree-wrapper{
 
     margin-left: 2rem;
-    width: 90%;
+    width: 75%;
     /* box-shadow: 2px 2px 5px purple;
     border-bottom: 1px solid purple;
     border-left: 1px solid purple;
